<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">逐波</string>
    <string name="app_title">lipper</string>
    <string name="login">登录</string>
    <string name="login_e">SIGN IN</string>
    <string name="go_to_dribbble_login">前往dribbble登录</string>
    <string name="need_login">你需要先去dribbble授权才能使用此app</string>
    <string name="sign_in_now">SIGN IN NOW</string>
    <string name="under_login">正在登陆，请稍候</string>
    <string name="login_failed">登录失败请重试</string>
    <string name="login_expire">登录过期请重新登陆</string>
    <string name="too_many_request">请求过多，请稍后再试</string>
    <string name="home">主页</string>
    <string name="activity">提醒</string>
    <string name="search">搜索</string>
    <string name="user">个人</string>
    <string name="follower">粉丝</string>
    <string name="following">关注</string>
    <string name="buckets">桶</string>
    <string name="likes">喜欢的作品</string>
    <string name="teams">小组</string>
    <string name="projects">项目</string>
    <string name="retry_hint">加载失败，请点击屏幕重试</string>
    <string name="no_data">数据为空</string>
    <string name="dribbble_login_hint">你需要先去dribbble登录才能使用此功能</string>
    <string name="failed_to_load">加载失败</string>
    <string name="search_no_data">没有搜索到关键字</string>

    <string name="small_with_info">小图</string>
    <string name="large_with_info">大图</string>
    <string name="only_image">仅图片</string>

    <string name="dialog_sort_name">排序</string>
    <string name="dialog_time_name">时间</string>
    <string name="dialog_type_name">类型</string>

    <string name="apply_filters">确定</string>
    <string name="no_tags" translatable="false">no tags</string>



    <string-array name="home_page">
        <item>主页</item>
        <item>搜索</item>
        <item>个人</item>
    </string-array>

    <string-array name="sort">
        <item>流行</item>
        <item>最近</item>
        <item>浏览数</item>
        <item>评论数</item>
    </string-array>
    <string-array name="type">
        <item>投篮</item>
        <item>初登场</item>
        <item>团队</item>
        <item>响应</item>
        <item>动图</item>
        <item>附件</item>
        <item>再创作</item>
    </string-array>
    <string-array name="time">
        <item>现在</item>
        <item>一周</item>
        <item>一月</item>
        <item>一年</item>
        <item>所有</item>
    </string-array>


    <string name="transition_search_back" translatable="false">transition_search_back</string>
    <string name="transition_dribbble_login" translatable="false">transition_dribbble_login</string>
    <string name="transition_user_image" translatable="false">transition_user_image</string>
    <string name="transition_user_name" translatable="false">transition_user_name</string>
    <string name="transition_user_location" translatable="false">transition_user_location</string>
    <string name="transition_user_bio" translatable="false">transition_user_bio</string>
    <string name="transition_user_follower" translatable="false">transition_user_follower</string>
    <string name="transition_user_following" translatable="false">transition_user_following</string>
    <string name="transition_shot" translatable="false">shot</string>
    <string name="transition_shot_background" translatable="false">shot_background</string>


    <string name="open_drawer" translatable="false">open drawer</string>
    <string name="close_drawer" translatable="false">close drawer</string>

</resources>
