<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:fitsSystemWindows="false">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/short_distance">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_e"
            android:textColor="@color/secondary_text"

            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_distance"
            android:gravity="center"
            android:text="@string/need_login"
            android:textColor="@color/secondary_text"
            android:textSize="12sp" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/rotateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="48dp"
        android:elevation="4dp"
        android:src="@mipmap/login_float_bg"
        app:backgroundTint="@android:color/white"
        app:fabSize="normal" />


    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/normal_button_height"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/big_distance"
        android:background="@drawable/button_ripple_oval"
        android:paddingLeft="@dimen/longer_distance"
        android:paddingRight="@dimen/longer_distance"
        android:text="@string/sign_in_now"
        android:textColor="@color/secondary_text"
        android:textSize="12sp"
        android:translationZ="4dp"
        android:visibility="invisible" />
</RelativeLayout>