<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/primary"
            app:cardElevation="2dp"
            app:cardMaxElevation="2dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/home_popup_large_layout"
                    android:background="?android:attr/selectableItemBackground"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@drawable/ic_large_white"
                        android:layout_width="18dp"
                        android:layout_height="18dp" />
                    <TextView
                        android:layout_gravity="center"
                        android:text="@string/large_with_info"
                        android:textColor="@android:color/white"
                        android:layout_marginLeft="12dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:id="@+id/home_popup_small_layout"
                    android:background="?android:attr/selectableItemBackground"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@drawable/ic_small_white"
                        android:layout_width="18dp"
                        android:layout_height="18dp" />
                    <TextView
                        android:layout_gravity="center"
                        android:text="@string/small_with_info"
                        android:textColor="@android:color/white"
                        android:layout_marginLeft="12dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/home_popup_only_image_layout"
                    android:background="?android:attr/selectableItemBackground"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@drawable/ic_only_image_white"
                        android:layout_width="18dp"
                        android:layout_height="18dp" />
                    <TextView
                        android:layout_gravity="center"
                        android:text="@string/only_image"
                        android:textColor="@android:color/white"
                        android:layout_marginLeft="12dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
